feat: generate workforce read contract types (#304)
* feat: generate workforce lookup types

* feat: generate workforce queue types
